<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_name"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/main_image"
            android:id="@+id/main_imageView"/>

        <Button
            android:text="@string/play_btn"
            android:layout_gravity="center"
            style="@style/main_btn_style"
            android:background="@drawable/main_btn_shape"
            android:id="@+id/play_btn"/>

        <Button
            android:text="@string/shop_btn"
            android:layout_gravity="center"
            style="@style/main_btn_style"
            android:background="@drawable/main_btn_shape"
            android:id="@+id/shop_btn"/>

        <Button
            android:text="@string/purchased_btn"
            android:layout_gravity="center"
            style="@style/main_btn_style"
            android:background="@drawable/main_btn_shape"
            android:id="@+id/records_btn"/>


</LinearLayout>