<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/game_background_6"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/gameOver_text"
        android:textSize="50sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/your_score_text"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="250dp"
        android:layout_height="250sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="100"
        android:textSize="50sp"
        android:background="@drawable/score_textview_shape"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/score_TV"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bestScore_text"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:id="@+id/bestScoreAnnouncement_textView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="120"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:id="@+id/bestScore_textView"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:text="@string/tryAgain_btn"
            android:textSize="40sp"
            android:textAllCaps="false"
            android:background="@drawable/main_btn_shape"
            android:textColor="@color/white"
            android:id="@+id/tryAgain_btn"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/home_text"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:background="@drawable/main_btn_shape"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:id="@+id/home2_btn"/>

    </LinearLayout>

</LinearLayout>